# mandelbrot_and_julia_sets

./: .gitignore  .gitmodules  CMakeLists.txt  makefile  readme.md
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: gl.h
lib/glfw/examples/: triangle-opengles
lib/glfw/tests/: allocator
res/shaders/: julia_set.fs  main.fs  main.vs  mandelbrot_set.fs  mandelbrot_set.vs
src/: App.cpp  App.hpp  app.hpp  main.c  main.cpp  state.h
src/app/: app.cpp  app.hpp
src/app/julia/: cleanup.cpp  include.hpp  init.cpp  render.cpp  update.cpp
src/app/mandelbrot/: cleanup.cpp  include.hpp  init.cpp  render.cpp  update.cpp
src/gfx/: gfx.h  gfx.hpp  includes.hpp  shader.c  shader.cpp  shader.h  shader.hpp  vao.c  vao.cpp  vao.h  vao.hpp  vbo.c  vbo.cpp  vbo.h  vbo.hpp  window.c  window.cpp  window.h  window.hpp
src/util/: util.h  util.hpp
src/utils/: glad.cpp  glad.hpp  glfw.cpp  glfw.hpp  imgui.cpp  imgui.hpp  math.cpp  math.hpp  utils.hpp
